# pia

./: README.md  pyproject.toml
casopractico/: pyproject.toml
casopractico/casopractico/: churn_predict_app.py  churn_predict_form.py  churn_predict_service.py  index.html
casopractico/models/: churn-model.pck
casopractico/notebooks/: casopractico.ipynb  firstSteps.ipynb
exercises/: RPS_Basic.py  StateMachine.py  eight_queen_gpt.py  eight_queens.py  example.py
practicaguiada01/: api.py  face_anonymize.py  face_detection.py  loadenv.py
saa/notebooks/: a.ipynb  my_array.csv  my_array.npy  my_arrays.npz  tools_numpy_con_preguntas.ipynb
tasks/: task1.py
