[tool.poetry]
name = "casopractico"
version = "0.1.0"
description = ""
authors = ["Adrián Mateos Pérez <adrian.perez@free-now.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.3.2"
pandas = "^2.1.3"
ipykernel = "^6.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
